# flake8-py-compile

./: README.md  pyproject.toml  run_py_compile.py  tox.ini
.github/workflows/: run_tox.yml
tests/: test_data.py  test_flake8_py_compile.py
